--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -12,12 +12,17 @@
       --accent: #60a5fa;
     }
     * { box-sizing: border-box; }
-    html, body { height: 100%; margin: 0; }
-    body {
+    html, body {
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-      color: var(--fg); background: radial-gradient(1200px 800px at 10% -10%, #1a2333 0%, var(--bg) 60%);
+      color: var(--fg);
+      background: radial-gradient(1200px 800px at 10% -10%, #1a2333 0%, var(--bg) 60%);
       line-height: 1.5;
-      display: flex; align-items: center; justify-content: center; padding: 24px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 16px;
+      -webkit-text-size-adjust: 100%;
+      text-size-adjust: 100%;
     }
 
     .card {
@@ -28,25 +33,29 @@
     }
 
     header {
-      padding: 28px 28px 8px; display: flex; justify-content: space-between; align-items: center;
+      padding: 18px 18px 8px; display: flex; justify-content: space-between; align-items: center;
     }
     .brand { font-weight: 700; letter-spacing: .2px; }
     .pill { color: var(--muted); font-size: 14px; }
 
     .hero {
-      display: grid; grid-template-columns: 1.2fr 1fr; gap: 0; align-items: stretch;
+      display: grid;
+      grid-template-columns: 1fr; /* mobile-first */
+      gap: 0;
+      align-items: stretch;
     }
-    @media (max-width: 900px) {
-      .hero { grid-template-columns: 1fr; }
+    /* Desktop / wide screens */
+    @media (min-width: 900px) {
+      .hero { grid-template-columns: 1.2fr 1fr; }
     }
 
-    .left { padding: 28px; display: flex; flex-direction: column; gap: 18px; }
+    .left { padding: 18px; display: flex; flex-direction: column; gap: 18px; }
     h1 { margin: 0; font-size: clamp(28px, 4.5vw, 48px); line-height: 1.1; }
     p.lede { margin: 0; color: var(--muted); font-size: clamp(16px, 2.2vw, 18px); }
 
     /* Auto-scrolling text (vertical ticker) */
     .ticker {
-      height: 120px; overflow: hidden; position: relative; border: 1px dashed rgba(255,255,255,.12);
+      height: 140px; /* comfortable on phones */ overflow: hidden; position: relative; border: 1px dashed rgba(255,255,255,.12);
       border-radius: 12px; padding: 8px 12px; background: rgba(0,0,0,.12);
     }
     .ticker ul { list-style: none; margin: 0; padding: 0; }
@@ -62,11 +71,26 @@
 
     .right { position: relative; }
     .video-wrap { position: relative; width: 100%; padding-top: 56.25%; /* 16:9 */ background: #111; }
-    .video-wrap iframe, .video-wrap video { position: absolute; inset: 0; width: 100%; height: 100%; border: 0; border-left: 1px solid rgba(255,255,255,0.08); }
+    .video-wrap iframe, .video-wrap video {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
+    @media (min-width: 900px) {
+      .video-wrap iframe, .video-wrap video { border-left: 1px solid rgba(255,255,255,0.08); }
+    }
 
     .cta {
-      display: inline-flex; align-items: center; gap: 10px; padding: 12px 16px; background: var(--accent);
-      color: #041226; border-radius: 12px; font-weight: 700; text-decoration: none; width: fit-content;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      padding: 14px 16px;
+      background: var(--accent);
+      color: #041226;
+      border-radius: 14px; font-weight: 700; text-decoration: none; width: fit-content;
       box-shadow: 0 8px 24px rgba(96,165,250,.35);
     }
     .cta small { opacity: .85; font-weight: 500; }
@@ -81,8 +105,8 @@
 
     <section class="hero" aria-label="Hero">
       <div class="left">
-        <h1>Auto‑scrolling highlights + video</h1>
-        <p class="lede">Replace the text below with your own messages. The list scrolls automatically in a seamless loop.</p>
+        <h1>Fleur d’Oranger</h1>
+        <p class="lede">Designed for phones first: the video appears at the top, and the highlights auto‑scroll below. Replace the text with your own.</p>
 
         <div class="ticker" id="ticker">
           <!-- We render two copies of the same list for a continuous loop -->
@@ -164,4 +188,3 @@
   </script>
 </body>
 </html>
-
