--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -106,7 +106,7 @@
     <section class="hero" aria-label="Hero">
       <div class="left">
         <h1>Fleur d’Oranger</h1>
-        <p class="lede">Designed for phones first: the video appears at the top, and the highlights auto‑scroll below. Replace the text with your own.</p>
+        <p class="lede">Designed for phones first: LA QUÍMICA ENTRE NOSOTROS.</p>
 
         <div class="ticker" id="ticker">
           <!-- We render two copies of the same list for a continuous loop -->
