Update hero section text in index.html

--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -106,7 +106,8 @@
     <section class="hero" aria-label="Hero">
       <div class="left">
         <h1>Fleur d’Oranger</h1>
-        <p class="lede">Designed for phones first: LA QUÍMICA ENTRE NOSOTROS.</p>
+        <p class="lede">TÚ Y YO 
+          QUÍMICA</p>
 
         <div class="ticker" id="ticker">
           <!-- We render two copies of the same list for a continuous loop -->
