Refactor header and update lede text
Updated header content and modified the lede paragraph.

--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -99,15 +99,14 @@
 <body>
   <main class="card" role="main">
     <header>
-      <div class="brand">Your Brand</div>
-      <div class="pill">Landing demo</div>
+      <!--div class="brand">Your Brand</div-->
+      <!--div class="pill">Landing demo</div-->
     </header>
 
     <section class="hero" aria-label="Hero">
       <div class="left">
         <h1>Fleur d’Oranger</h1>
-        <p class="lede">TÚ Y YO 
-          QUÍMICA</p>
+        <p class="lede">LA QUÍMICA ENTRE LOS DOS</p>
 
         <div class="ticker" id="ticker">
           <!-- We render two copies of the same list for a continuous loop -->
