--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -1,22 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Landing Page</title>
+  <title>Fleur d’Oranger</title>
   <style>
     :root {
       --bg: #0b0f19;
       --fg: #e8edf7;
       --muted: #94a3b8;
-      --accent: #60a5fa;
+      --title: #FFC000;   /* Fleur d'Oranger */
+      --accent: #FFAC1C;  /* details */
     }
+
     * { box-sizing: border-box; }
-    html, body {
+    html, body { height: 100%; margin: 0; }
+    body {
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
       color: var(--fg);
       background: radial-gradient(1200px 800px at 10% -10%, #1a2333 0%, var(--bg) 60%);
-      line-height: 1.5;
+      line-height: 1.55;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -29,14 +32,12 @@
       width: min(100%, 980px);
       border: 1px solid rgba(255,255,255,0.08);
       background: rgba(255,255,255,0.03);
-      border-radius: 20px; overflow: hidden; box-shadow: 0 20px 60px rgba(0,0,0,.35);
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 0 20px 60px rgba(0,0,0,.35);
     }
 
-    header {
-      padding: 18px 18px 8px; display: flex; justify-content: space-between; align-items: center;
-    }
-    .brand { font-weight: 700; letter-spacing: .2px; }
-    .pill { color: var(--muted); font-size: 14px; }
+    header { padding: 10px 18px 0; }
 
     .hero {
       display: grid;
@@ -44,42 +45,111 @@
       gap: 0;
       align-items: stretch;
     }
-    /* Desktop / wide screens */
     @media (min-width: 900px) {
       .hero { grid-template-columns: 1.2fr 1fr; }
     }
 
-    .left { padding: 18px; display: flex; flex-direction: column; gap: 18px; }
-    h1 { margin: 0; font-size: clamp(28px, 4.5vw, 48px); line-height: 1.1; }
-    p.lede { margin: 0; color: var(--muted); font-size: clamp(16px, 2.2vw, 18px); }
+    .left {
+      padding: 18px;
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+    }
+
+    h1 {
+      margin: 6px 0 0;
+      font-size: clamp(30px, 5.2vw, 52px);
+      line-height: 1.08;
+      text-align: center;
+      color: var(--title);
+      letter-spacing: .2px;
+      text-shadow: 0 8px 30px rgba(255, 172, 28, .18);
+    }
+
+    .lede {
+      margin: 0;
+      text-align: center;
+      color: rgba(255, 172, 28, .92);
+      font-weight: 700;
+      letter-spacing: .12em;
+      text-transform: uppercase;
+      font-size: clamp(13px, 2.8vw, 16px);
+    }
 
     /* Auto-scrolling text (vertical ticker) */
     .ticker {
-      height: 140px; /* comfortable on phones */ overflow: hidden; position: relative; border: 1px dashed rgba(255,255,255,.12);
-      border-radius: 12px; padding: 8px 12px; background: rgba(0,0,0,.12);
+      height: 280px; /* taller because your text is long */
+      overflow: hidden;
+      position: relative;
+      border: 1px solid rgba(255, 172, 28, .45);
+      border-radius: 14px;
+      padding: 12px 14px;
+      background: rgba(0,0,0,.12);
+      box-shadow: inset 0 0 0 1px rgba(255,255,255,.05);
     }
-    .ticker ul { list-style: none; margin: 0; padding: 0; }
-    .ticker li { padding: 6px 0; font-size: clamp(16px, 2vw, 18px); }
 
-    /* duplicate list for seamless loop */
-    .ticker-track { position: absolute; width: 100%; will-change: transform; }
-    .ticker-track.animate { animation: scrollUp linear infinite; }
+    /* One long column of text */
+    .ticker-track {
+      position: absolute;
+      left: 14px;
+      right: 14px;
+      top: 12px;
+      will-change: transform;
+    }
+
+    .ticker-track.animate {
+      animation-name: scrollUp;
+      animation-timing-function: linear;
+      animation-iteration-count: infinite;
+      animation-duration: var(--duration, 40s);
+    }
+
     @keyframes scrollUp {
-      0% { transform: translateY(0); }
-      100% { transform: translateY(-50%); }
+      from { transform: translateY(0); }
+      to   { transform: translateY(calc(-1 * var(--scroll-distance, 400px))); }
+    }
+
+    .scroll-text {
+      font-size: clamp(15px, 3.4vw, 18px);
+      line-height: 1.7;           /* fixes overlap */
+      letter-spacing: .01em;
+      color: rgba(232, 237, 247, .95);
+      white-space: pre-line;      /* respects new lines */
+    }
+
+    .scroll-text b,
+    .scroll-text strong { color: rgba(255, 192, 0, .98); }
+
+    /* subtle separator line to hint 'scrolling' */
+    .ticker:before {
+      content: "";
+      position: absolute;
+      left: 0; right: 0;
+      top: 0;
+      height: 1px;
+      background: linear-gradient(90deg, transparent, rgba(255,172,28,.55), transparent);
     }
 
     .right { position: relative; }
-    .video-wrap { position: relative; width: 100%; padding-top: 56.25%; /* 16:9 */ background: #111; }
-    .video-wrap iframe, .video-wrap video {
+
+    .video-wrap {
+      position: relative;
+      width: 100%;
+      padding-top: 56.25%; /* 16:9 */
+      background: #0a0e16;
+    }
+
+    .video-wrap iframe,
+    .video-wrap video {
       position: absolute;
       inset: 0;
       width: 100%;
       height: 100%;
       border: 0;
     }
+
     @media (min-width: 900px) {
-      .video-wrap iframe, .video-wrap video { border-left: 1px solid rgba(255,255,255,0.08); }
+      .video-wrap { border-left: 1px solid rgba(255, 172, 28, .25); }
     }
 
     .cta {
@@ -88,103 +158,150 @@
       justify-content: center;
       gap: 10px;
       padding: 14px 16px;
-      background: var(--accent);
-      color: #041226;
-      border-radius: 14px; font-weight: 700; text-decoration: none; width: fit-content;
-      box-shadow: 0 8px 24px rgba(96,165,250,.35);
+      background: rgba(255, 172, 28, .16);
+      color: var(--fg);
+      border: 1px solid rgba(255, 172, 28, .55);
+      border-radius: 14px;
+      font-weight: 700;
+      text-decoration: none;
+      width: 100%;
+      box-shadow: 0 10px 26px rgba(255, 172, 28, .10);
     }
-    .cta small { opacity: .85; font-weight: 500; }
+    .cta small { opacity: .9; font-weight: 600; }
+
+    /* slightly more breathing room on very small phones */
+    @media (max-width: 360px) {
+      .ticker { height: 240px; }
+    }
   </style>
 </head>
 <body>
   <main class="card" role="main">
-    <header>
-      <!--div class="brand">Your Brand</div-->
-      <!--div class="pill">Landing demo</div-->
-    </header>
+    <header></header>
 
     <section class="hero" aria-label="Hero">
       <div class="left">
         <h1>Fleur d’Oranger</h1>
         <p class="lede">LA QUÍMICA ENTRE LOS DOS</p>
 
-        <div class="ticker" id="ticker">
-          <!-- We render two copies of the same list for a continuous loop -->
+        <div class="ticker" id="ticker" aria-label="Texto en desplazamiento automático">
+          <!-- We render two copies of the same text for a continuous loop -->
           <div class="ticker-track" id="trackA">
-            <ul>
-              <li>Fast setup: just one HTML file.</li>
-              <li>Host it for free on GitHub Pages or Netlify.</li>
-              <li>Share with a QR code in seconds.</li>
-              <li>Works great on mobile.</li>
-              <li>Embed your Google Drive video on the right.</li>
-            </ul>
+            <div class="scroll-text" id="scrollTextA"><strong>QUÍMICA</strong>
+
+Proviene del Latín ‘alchymia’ que a su vez proviene
+Del Griego ‘Khēmeía’ (χημεία) que significa ‘fluir’ (Khúma) y al mismo tiempo ‘verter juntos’ (Khéo). Significa ‘fundir metales’ en busca de nuevas y mejores aleaciones.
+Del Egipcio Km, ‘𓆎 ’ o ‘negro’, y que da origen a Khem ‘𓆎𓅓𓏏𓊖’ o ‘tierra negra’, forma de referirse a Egipto, Lugar de tierra negra “fértil” por el légamo del Nilo, en contraste con la tierra roja del desierto.
+
+Del Arábico ‘al-kīmiyā' en que ‘al’ es el prefijo determinante ‘la’ o ‘el’ y ‘kīmiyā' es ‘Ciencia de Transmutación de los Metales’.
+
+En 330 AC se funda Alejandría, que se convierte en el punto de encuentro y fusión de las civilizaciones Griega y Egipcia, y posteriormente la influencia árabe y romana.
+De la imbricación de la filosofía griega, la metalurgia egipcia y la metafísica árabe, surge la ‘alchymia’, la primera ciencia y arte, que busca transformar la materia corriente, la tierra negra, el metal común, oscuro y opaco como el plomo, en el metal perfecto, el oro. Negro a Dorado.
+
+La alquimia busca transformar la materia en lo sublime, busca perfeccionar mediante la fusión experimental, en última instancia busca el secreto de la inmortalidad (la piedra filosofal o el elemento mágico en la alquimia).
+
+Este perfume fue escogido luego de probar numerosas esencias y decidiendo un perfil específico, floral y anaranjado, primavera, sol, color dorado y dulce.
+
+Le Labo es un lugar en que fabrican el perfume a pedido, delante de uno, en un espacio de laboratorio, combinando esencias y elementos con precisión y rigurosidad técnica, para lograr el perfil buscado. Una experiencia alquímica, una chispa de química.</div>
           </div>
-          <div class="ticker-track" id="trackB">
-            <ul>
-              <li>Fast setup: just one HTML file.</li>
-              <li>Host it for free on GitHub Pages or Netlify.</li>
-              <li>Share with a QR code in seconds.</li>
-              <li>Works great on mobile.</li>
-              <li>Embed your Google Drive video on the right.</li>
-            </ul>
+
+          <div class="ticker-track" id="trackB" aria-hidden="true">
+            <div class="scroll-text" id="scrollTextB"><strong>QUÍMICA</strong>
+
+Proviene del Latín ‘alchymia’ que a su vez proviene
+Del Griego ‘Khēmeía’ (χημεία) que significa ‘fluir’ (Khúma) y al mismo tiempo ‘verter juntos’ (Khéo). Significa ‘fundir metales’ en busca de nuevas y mejores aleaciones.
+Del Egipcio Km, ‘𓆎 ’ o ‘negro’, y que da origen a Khem ‘𓆎𓅓𓏏𓊖’ o ‘tierra negra’, forma de referirse a Egipto, Lugar de tierra negra “fértil” por el légamo del Nilo, en contraste con la tierra roja del desierto.
+
+Del Arábico ‘al-kīmiyā' en que ‘al’ es el prefijo determinante ‘la’ o ‘el’ y ‘kīmiyā' es ‘Ciencia de Transmutación de los Metales’.
+
+En 330 AC se funda Alejandría, que se convierte en el punto de encuentro y fusión de las civilizaciones Griega y Egipcia, y posteriormente la influencia árabe y romana.
+De la imbricación de la filosofía griega, la metalurgia egipcia y la metafísica árabe, surge la ‘alchymia’, la primera ciencia y arte, que busca transformar la materia corriente, la tierra negra, el metal común, oscuro y opaco como el plomo, en el metal perfecto, el oro. Negro a Dorado.
+
+La alquimia busca transformar la materia en lo sublime, busca perfeccionar mediante la fusión experimental, en última instancia busca el secreto de la inmortalidad (la piedra filosofal o el elemento mágico en la alquimia).
+
+Este perfume fue escogido luego de probar numerosas esencias y decidiendo un perfil específico, floral y anaranjado, primavera, sol, color dorado y dulce.
+
+Le Labo es un lugar en que fabrican el perfume a pedido, delante de uno, en un espacio de laboratorio, combinando esencias y elementos con precisión y rigurosidad técnica, para lograr el perfil buscado. Una experiencia alquímica, una chispa de química.</div>
           </div>
         </div>
 
-        <a class="cta" href="#" id="cta">
-          Open Video <small>(or replace this with your CTA)</small>
-        </a>
+        <a class="cta" href="#" id="cta">Ver video <small>(abrir en pestaña nueva)</small></a>
       </div>
 
       <div class="right">
         <div class="video-wrap">
-          <!-- Option A: Google Drive PREVIEW embed (replace 1LrInamCm7kH26BmsHRJ2TH1r2Qtxn2bz below) -->
-          <!-- Get your 1LrInamCm7kH26BmsHRJ2TH1r2Qtxn2bz from a Drive share link like https://drive.google.com/file/d/1LrInamCm7kH26BmsHRJ2TH1r2Qtxn2bz/view -->
+          <!--
+            Autoplay note:
+            - Browsers generally only allow autoplay if the video is muted.
+            - Google Drive embeds often ignore autoplay requests (Drive may require user interaction).
+            - If you need TRUE autoplay everywhere, use the <video> option below with a direct .mp4 URL.
+          -->
+
+          <!-- Option A: Google Drive preview (may NOT autoplay reliably) -->
           <iframe
             id="drivePlayer"
             src="https://drive.google.com/file/d/1LrInamCm7kH26BmsHRJ2TH1r2Qtxn2bz/preview"
             allow="autoplay; fullscreen; picture-in-picture"
             allowfullscreen
-            title="Embedded video from Google Drive"></iframe>
+            title="Video"></iframe>
 
-          <!-- Option B: Direct MP4 (if you host an .mp4 file somewhere that supports direct serving) -->
-          <!-- <video controls playsinline autoplay muted loop>
-            <source src="https://YOUR-CDN.com/path/video.mp4" type="video/mp4" />
-          </video> -->
+          <!-- Option B: Direct MP4 (best for autoplay). Put video.mp4 in the SAME folder and uncomment this, then delete the iframe above. -->
+          <!--
+          <video autoplay muted playsinline loop controls>
+            <source src="video.mp4" type="video/mp4" />
+          </video>
+          -->
         </div>
       </div>
     </section>
   </main>
 
   <script>
-    // ------- Ticker autoscroll (seamless loop) -------
+    // ------- Ticker autoscroll (seamless loop, no overlaps) -------
     const trackA = document.getElementById('trackA');
     const trackB = document.getElementById('trackB');
     const ticker = document.getElementById('ticker');
 
-    function syncHeights() {
-      // Set the animation to cover exactly two stacks worth of height
-      const totalHeight = trackA.offsetHeight + 12; // small buffer
-      const duration = Math.max(12, (totalHeight / 24)); // seconds; slower for taller lists
-      [trackA, trackB].forEach((el, i) => {
-        el.style.top = (i === 0 ? 0 : totalHeight/2) + 'px';
-        el.style.animationDuration = duration + 's';
-        el.classList.add('animate');
+    function syncTicker() {
+      // Stop animations while measuring
+      trackA.classList.remove('animate');
+      trackB.classList.remove('animate');
+
+      // Make sure trackB sits right after trackA
+      const contentHeight = trackA.scrollHeight;
+      trackA.style.top = '12px';
+      trackB.style.top = (12 + contentHeight) + 'px';
+
+      // Scroll distance equals one full content block
+      ticker.style.setProperty('--scroll-distance', contentHeight + 'px');
+
+      // Duration: slower for longer text (tweak the divisor to change speed)
+      const duration = Math.max(30, Math.round(contentHeight / 18)); // seconds
+      ticker.style.setProperty('--duration', duration + 's');
+
+      // Restart animations
+      requestAnimationFrame(() => {
+        trackA.classList.add('animate');
+        trackB.classList.add('animate');
       });
     }
 
-    window.addEventListener('load', syncHeights);
+    window.addEventListener('load', syncTicker);
     window.addEventListener('resize', () => {
-      [trackA, trackB].forEach(el => el.classList.remove('animate'));
-      requestAnimationFrame(() => requestAnimationFrame(syncHeights));
+      clearTimeout(window.__tickerTimer);
+      window.__tickerTimer = setTimeout(syncTicker, 150);
     });
 
-    // Optional: make the CTA open the same Drive video in a new tab
+    // CTA: open Drive video in a new tab
     document.getElementById('cta').addEventListener('click', (e) => {
       e.preventDefault();
       const iframe = document.getElementById('drivePlayer');
       const url = iframe?.getAttribute('src');
       if (url) window.open(url, '_blank');
     });
+
+    // Attempt autoplay (Drive may still block). If autoplay is blocked, nothing breaks.
+    // For true autoplay, use the <video autoplay muted playsinline> option.
   </script>
 </body>
 </html>
