Update lede paragraph text in index.html

--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -182,7 +182,7 @@
     <section class="hero" aria-label="Hero">
       <div class="left">
         <h1>Fleur d’Oranger</h1>
-        <p class="lede">LA QUÍMICA ENTRE LOS DOS</p>
+        <p class="lede">*QUÍMICA</p>
 
         <div class="ticker" id="ticker" aria-label="Texto en desplazamiento automático">
           <!-- We render two copies of the same text for a continuous loop -->
