--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -6,11 +6,11 @@
   <title>Fleur d’Oranger</title>
   <style>
     :root {
-      --bg: #0b0f19;
-      --fg: #e8edf7;
-      --muted: #94a3b8;
-      --title: #FFC000;   /* Fleur d'Oranger */
-      --accent: #FFAC1C;  /* details */
+      --bg: #0b0f19;        /* Background color of the landing */
+      --fg: #e8edf7;        /* Main text color */
+      --muted: #94a3b8;     /* Secondary / muted text */
+      --title: #FFC000;    /* Title color: Fleur d'Oranger */
+      --accent: #FFAC1C;   /* Accent color: borders, highlights */
     }
 
     * { box-sizing: border-box; }
@@ -58,9 +58,9 @@
 
     h1 {
       margin: 6px 0 0;
-      font-size: clamp(30px, 5.2vw, 52px);
-      line-height: 1.08;
-      text-align: center;
+      font-size: clamp(30px, 5.2vw, 52px); /* TITLE SIZE: min, fluid, max */
+      line-height: 1.08;                   /* TITLE LINE HEIGHT */
+      text-align: center;                  /* TITLE ALIGNMENT */
       color: var(--title);
       letter-spacing: .2px;
       text-shadow: 0 8px 30px rgba(255, 172, 28, .18);
@@ -68,23 +68,23 @@
 
     .lede {
       margin: 0;
-      text-align: center;
-      color: rgba(255, 172, 28, .92);
+      text-align: center;                  /* SUBTITLE ALIGNMENT */
+      color: rgba(255, 172, 28, .92);       /* SUBTITLE COLOR */
       font-weight: 700;
-      letter-spacing: .12em;
+      letter-spacing: .12em;               /* SUBTITLE LETTER SPACING */
       text-transform: uppercase;
-      font-size: clamp(13px, 2.8vw, 16px);
+      font-size: clamp(13px, 2.8vw, 16px); /* SUBTITLE SIZE */
     }
 
     /* Auto-scrolling text (vertical ticker) */
     .ticker {
-      height: 280px; /* taller because your text is long */
+      height: 280px; /* TICKER HEIGHT (visible window) */
       overflow: hidden;
       position: relative;
-      border: 1px solid rgba(255, 172, 28, .45);
-      border-radius: 14px;
-      padding: 12px 14px;
-      background: rgba(0,0,0,.12);
+      border: 1px solid rgba(255, 172, 28, .45); /* TICKER BORDER COLOR */
+      border-radius: 14px;                      /* TICKER ROUNDED CORNERS */
+      padding: 12px 14px;                       /* INNER PADDING */
+      background: rgba(0,0,0,.12);              /* TICKER BACKGROUND */
       box-shadow: inset 0 0 0 1px rgba(255,255,255,.05);
     }
 
@@ -110,7 +110,7 @@
     }
 
     .scroll-text {
-      font-size: clamp(15px, 3.4vw, 18px);
+      font-size: clamp(17px, 3.8vw, 20px); /* SCROLL TEXT SIZE: increase/decrease these values */
       line-height: 1.7;           /* fixes overlap */
       letter-spacing: .01em;
       color: rgba(232, 237, 247, .95);
@@ -276,7 +276,7 @@ Le Labo es un lugar en que fabrican el perfume a pedido, delante de uno, en un e
       ticker.style.setProperty('--scroll-distance', contentHeight + 'px');
 
       // Duration: slower for longer text (tweak the divisor to change speed)
-      const duration = Math.max(30, Math.round(contentHeight / 18)); // seconds
+      const duration = Math.max(45, Math.round(contentHeight / 14)); // SCROLL SPEED: larger = slower (seconds) // seconds
       ticker.style.setProperty('--duration', duration + 's');
 
       // Restart animations
