--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -189,20 +189,42 @@
           <div class="ticker-track" id="trackA">
             <div class="scroll-text" id="scrollTextA"><strong>QUÍMICA</strong>
 
-Proviene del Latín ‘alchymia’ que a su vez proviene
-Del Griego ‘Khēmeía’ (χημεία) que significa ‘fluir’ (Khúma) y al mismo tiempo ‘verter juntos’ (Khéo). Significa ‘fundir metales’ en busca de nuevas y mejores aleaciones.
-Del Egipcio Km, ‘𓆎 ’ o ‘negro’, y que da origen a Khem ‘𓆎𓅓𓏏𓊖’ o ‘tierra negra’, forma de referirse a Egipto, Lugar de tierra negra “fértil” por el légamo del Nilo, en contraste con la tierra roja del desierto.
+Proviene del Latín ‘alchymia’ que a su vez proviene Del Griego ‘Khēmeía’ (χημεία) 
+              que significa ‘fluir’ (Khúma) y al mismo tiempo ‘verter juntos’ (Khéo). 
+              Significa ‘fundir metales’ en busca de nuevas y mejores aleaciones.
+              
+Del Egipcio Km, ‘𓆎 ’ o ‘negro’, y que da origen a Khem ‘𓆎𓅓𓏏𓊖’ o ‘tierra negra’, 
+              forma de referirse a Egipto, Lugar de tierra negra “fértil” 
+              por el légamo del Nilo, en contraste con la tierra roja del desierto.
 
-Del Arábico ‘al-kīmiyā' en que ‘al’ es el prefijo determinante ‘la’ o ‘el’ y ‘kīmiyā' es ‘Ciencia de Transmutación de los Metales’.
+Del Arábico ‘al-kīmiyā' en que ‘al’ es el prefijo determinante ‘la’ o ‘el’ 
+              y ‘kīmiyā' es ‘Ciencia de Transmutación de los Metales’.
 
-En 330 AC se funda Alejandría, que se convierte en el punto de encuentro y fusión de las civilizaciones Griega y Egipcia, y posteriormente la influencia árabe y romana.
-De la imbricación de la filosofía griega, la metalurgia egipcia y la metafísica árabe, surge la ‘alchymia’, la primera ciencia y arte, que busca transformar la materia corriente, la tierra negra, el metal común, oscuro y opaco como el plomo, en el metal perfecto, el oro. Negro a Dorado.
+En 330 AC se funda Alejandría, que se convierte en el punto de encuentro 
+              y fusión de las civilizaciones Griega y Egipcia, 
+              y posteriormente la influencia árabe y romana.
+              
+De la imbricación de la filosofía griega, la metalurgia egipcia 
+              y la metafísica árabe, surge la ‘alchymia’, la primera ciencia/arte
+              que busca transformar la materia corriente, la tierra negra, el metal común, 
+              oscuro y opaco como el plomo, en el metal perfecto, el oro. 
+              Negro a Dorado.
 
-La alquimia busca transformar la materia en lo sublime, busca perfeccionar mediante la fusión experimental, en última instancia busca el secreto de la inmortalidad (la piedra filosofal o el elemento mágico en la alquimia).
+La alquimia busca transformar la materia en lo sublime, 
+              busca perfeccionar mediante la fusión experimental, 
+              en última instancia busca el secreto de la inmortalidad 
+              (la búsqueda incesante y fallida de la piedra filosofal 
+              o el elemento mágico legendario en la alquimia).
 
-Este perfume fue escogido luego de probar numerosas esencias y decidiendo un perfil específico, floral y anaranjado, primavera, sol, color dorado y dulce.
+Este perfume fue creado luego de probar numerosas esencias elementales
+              y decidiendo un perfil específico, floral y anaranjado, 
+              primavera, sol, arenas, color dorado y dulce.
 
-Le Labo es un lugar en que fabrican el perfume a pedido, delante de uno, en un espacio de laboratorio, combinando esencias y elementos con precisión y rigurosidad técnica, para lograr el perfil buscado. Una experiencia alquímica, una chispa de química.</div>
+Le Labo es un espacio donde fabrican el perfume a pedido, 
+              delante de uno, en un espacio de laboratorio, 
+              combinando esencias y elementos con precisión y rigurosidad técnica, 
+              para lograr el perfil buscado. Una experiencia alquímica, 
+              una chispa de química.</div>
           </div>
 
           <div class="ticker-track" id="trackB" aria-hidden="true">
