--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -262,7 +262,7 @@ Le Labo es un lugar en que fabrican el perfume a pedido, delante de uno, en un e
           <!-- Option A: Google Drive preview (may NOT autoplay reliably) -->
           <iframe
             id="drivePlayer"
-            src="https://drive.google.com/file/d/1LrInamCm7kH26BmsHRJ2TH1r2Qtxn2bz/preview"
+            src="https://drive.google.com/file/d/1Upzy29EqOOC3S2AiaIaC8JXAWMdvY9It/view?usp=sharing"
             allow="autoplay; fullscreen; picture-in-picture"
             allowfullscreen
             title="Video"></iframe>
