Fix typo and update video embed code

--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -199,7 +199,7 @@ Proviene del Latín ‘alchymia’ que a su vez proviene del Griego
 Del Egipcio Km, ‘𓆎 ’ o ‘Negro’ 
               y que da origen a Khem ‘𓆎𓅓𓏏𓊖’ o ‘Tierra Negra’, 
               forma de referirse a Egipto, 
-              su nombre origibal, 
+              su nombre original, 
               el 'Lugar de Tierra Negra' “fértil” 
               por el légamo del Nilo, 
               en contraste con la tierra roja del desierto.
@@ -249,7 +249,7 @@ Proviene del Latín ‘alchymia’ que a su vez proviene del Griego
 Del Egipcio Km, ‘𓆎 ’ o ‘Negro’ 
               y que da origen a Khem ‘𓆎𓅓𓏏𓊖’ o ‘Tierra Negra’, 
               forma de referirse a Egipto, 
-              su nombre origibal, 
+              su nombre original, 
               el 'Lugar de Tierra Negra' “fértil” 
               por el légamo del Nilo, 
               en contraste con la tierra roja del desierto.
@@ -301,11 +301,20 @@ Le Labo (Laboratorio) es un espacio donde el perfume es fabricado a pedido,
 
           <!-- Option A: Google Drive preview (may NOT autoplay reliably) -->
           <iframe
-            id="drivePlayer"
-            src="https://youtu.be/Xvb52SebfSI"
-            allow="autoplay; fullscreen; picture-in-picture"
-            allowfullscreen
-            title="Video"></iframe>
+  src="https://www.youtube.com/embed/VIDEO_ID
+    ?autoplay=1
+    &mute=1
+    &playsinline=1
+    &loop=1
+    &playlist=VIDEO_ID
+    &controls=0
+    &modestbranding=1
+    &rel=0"
+  allow="autoplay; fullscreen; picture-in-picture"
+  allowfullscreen
+  title="Fleur d’Oranger video">
+</iframe>
+
 
           <!-- Option B: Direct MP4 (best for autoplay). Put video.mp4 in the SAME folder and uncomment this, then delete the iframe above. -->
           <!--
