Clarify contrast between fertile and barren land
Updated descriptions to clarify the contrast between fertile and barren land.

--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+éril<!doctype html>
 <html lang="es">
 <head>
   <meta charset="utf-8" />
@@ -238,7 +238,7 @@ forma de referirse a Egipto,
 su nombre original,
 el 'Lugar de Tierra Negra' “fértil”
 por el légamo del Nilo,
-en contraste con la tierra roja del desierto.
+en contraste con la tierra roja y estéril del desierto.
 
 Del Arábico ‘Al-Kīmiyā'
 en que ‘al’ es el prefijo determinante ‘la’ o ‘el’
@@ -291,7 +291,7 @@ forma de referirse a Egipto,
 su nombre original,
 el 'Lugar de Tierra Negra' “fértil”
 por el légamo del Nilo,
-en contraste con la tierra roja del desierto.
+en contraste con la tierra roja y estéril del desierto.
 
 Del Arábico ‘Al-Kīmiyā'
 en que ‘al’ es el prefijo determinante ‘la’ o ‘el’
